--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <script src="https://unpkg.com/htmx.org@1.9.6"></script>
 
+<style>
+	.smooth {
+		transition: all 1s ease-in;
+	}
+</style>
+
 <html>
-  <head>
-    <title>Welcome to Weather Forecaster!</title>
-  </head>
-  <form action="/url" method="GET">
-    <label for="city">
-      Get weather forecast for
-      <input
-        type="text"
-        id="city"
-        name="city"
-        input pattern=".{2,0}" 
-		required title="5 to 10 characters"
-        placeholder="Chicago"
-        required
-		
-      />
-    </label>
-    <button
-      type="submit"
-      hx-get="/weather"
-      hx-params="city"
-	  hx-include="[name='city']"
-      hx-target="body"
-      hx-get="/"
-      hx-push-url="true"
-    >
-      Get Weather
-    </button>
-  </form>
+
+<head>
+	<title>Welcome to Weather Forecaster!</title>
+</head>
+<form action="/url" method="GET">
+	<label for="city">
+		Get weather forecast for
+		<input type="text" id="city" name="city" input pattern=".{2,0}" required title="5 to 10 characters"
+			placeholder="Chicago" required />
+	</label>
+	<button type="submit" hx-get="/weather" hx-params="city" hx-include="[name='city']" hx-target="body"
+		hx-push-url="true">
+		Get Weather
+	</button>
+	<br>
+	<button id="color-demo" class="smooth" style="color:rgb(173,8,54)" 
+	type="submit" hx-get="/weather" 
+	hx-params="city" hx-include="[name='city']" 
+	hx-swap="outerHTML" 
+		hx-push-url="true"
+		hx-trigger="every 1s">
+		Get Weather without swapping pages
+	</button>
+</form>
+
 </html>
