--- a/templates/weather.html
+++ b/templates/weather.html
@@ -24,6 +24,7 @@
       hx-target="body"
       hx-get="/"
       hx-push-url="true"
+	  hx-swap="innerHTML transition:true"
     >
       Return to Homepage!
     </button>
