--- a/templates/index.html
+++ b/templates/index.html
@@ -52,33 +52,88 @@
 		box-shadow: 0 0 3px #36cc00;
 	}
 </style>
-
-<html>
+<html lang="en">
 
 <head>
-	<title>Welcome to Weather Forecaster!</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=2, shrink-to-fit=no">
+	<meta name="description" content="A weather web app">
+	<meta name="author" content="Eric Keniuk">
+	<link rel="shortcut icon" type="image/x-icon" href="/weather.ico" />
+	<title>Weather Forecaster</title>
+
+	<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
+
+	<!-- bootstrap core CSS -->
+	<link href="/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/custom.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="/bootstrap/cover.css" rel="stylesheet">
 </head>
-<div class="slide-it">
-	<form action="/url" method="GET">
-		<label for="city">
-			Get weather forecast for
-			<input type="text" id="city" name="city" input pattern=".{2,0}" required title="5 to 10 characters"
-				placeholder="Chicago" required />
 
-		</label>
-		<button type="submit" hx-swap="innerHTML transition:true" hx-get="/weather" hx-params="city"
-			hx-include="[name='city']" hx-target="body" hx-push-url="true">
-			Get Weather
-		</button>
-	</form>
-</div>
 
-<!--
-<div hx-target="this" hx-swap="outerHTML" class="error">
-	<label>Email Address</label>
-	<input name="email" hx-post="/contact/email" hx-indicator="#ind" value="test@foo.com">
-	<img id="ind" src="/img/bars.svg" class="htmx-indicator" />
-	<div class='error-message'>That email is already taken! Please enter another email.</div>
-</div>
--->
+<body class="text-center">
+
+	<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+		<header class="masthead mb-auto">
+			<div class="inner">
+				<h3 class="masthead-brand">Forecaster</h3>
+				<nav class="nav nav-masthead justify-content-center">
+					<a class="nav-link active" href="https://getbootstrap.com/docs/4.0/examples/cover/#">Home</a>
+					<a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/cover/#">Features</a>
+					<a class="nav-link" href="https://getbootstrap.com/docs/4.0/examples/cover/#">Contact</a>
+				</nav>
+			</div>
+		</header>
+
+		<main role="main" class="inner cover">
+			<!--
+				<section id="hero" class="d-flex align-items-center">
+					<video autoplay muted loop id="myVideo">
+						<source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
+					</video>
+				</section>
+				-->
+			<div id="search-city" class="slide-it">
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+					integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+					crossorigin="anonymous"></script>
+				<form action="/url" method="GET">
+					<label for="city">
+						Get weather forecast for
+						<input type="text" id="city" name="city" input pattern=".{2,40}" required
+							title="2 to 40 characters" placeholder="Chicago" required />
+
+					</label>
+					<button type="submit" hx-swap="outerhtml transition:true" hx-get="/weather" hx-params="city"
+						hx-include="[name='city']" hx-target="#search-city" hx-push-url="true">
+						Get Weather
+					</button>
+				</form>
+			</div>
+		</main>
+
+
+		<footer class="mastfoot mt-auto">
+			<div class="inner">
+				<p>Forecaster web app by <a href="https://erickeniuk.github.io/">@EricKeniuk</a></p>
+			</div>
+		</footer>
+	</div>
+
+
+	<!-- bootstrap core JavaScript
+    ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="/bootstrap/jquery-3.2.1.slim.min.js.download"
+		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+	<script src="/bootstrap/popper.min.js.download"></script>
+	<script src="/bootstrap/bootstrap.min.js.download"></script>
+
+
+</body>
+
 </html>
